<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:allowDividerBelow="false"
        app:allowDividerAbove="false"
        app:title="General Settings">

        <SwitchPreferenceCompat
            android:enabled="true"
            app:icon="@drawable/ic_baseline_photo_filter_24"
            app:defaultValue="false"
            app:key="theme"
            app:summaryOff="Switch to dark Theme"
            app:summaryOn="Switch to light Theme"
            app:title="Theme" />

        <Preference
            app:enabled="true"
            app:defaultValue="false"
            app:key="@string/clear"
            app:title="Clear Cache"
            app:icon="@drawable/ic_baseline_memory_24"
            app:summaryOff="Clear cache memory"
            app:summaryOn="Clear cache memory"/>

        <SwitchPreferenceCompat
            app:enabled="true"
            app:defaultValue="false"
            app:key="@string/app_name"
            app:title="App Update Alert"
            app:icon="@drawable/ic_baseline_system_update_24"
            app:summaryOff="On this for getting our app update notification"
            app:summaryOn="Off this for not getting our app update notification"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerBelow="false"
        app:allowDividerAbove="false"
        app:title="Account Action">

        <Preference
            android:key="btndelforever"
            android:summary="Delete your CAdmin account ! this is not revertible."
            android:title="Delete your account."
            app:icon="@drawable/ic_baseline_delete_sweep_24" />

        <Preference
            android:key="resetOrganisation"
            android:summary="Delete all organisation."
            android:title="Reset Organisations"
            app:icon="@drawable/ic_baseline_group_work_24" />

        <Preference
            android:key="resetProjects"
            android:summary="Delete all projects."
            android:title="Reset All Projects"
            app:icon="@drawable/ic_baseline_work_24" />
    </PreferenceCategory>

</PreferenceScreen>